lang/macro/tests/ui/contract/fail/34-invalid-interface-name-1.stderr
error: invalid interface name: `r#fn`
 --> $DIR/34-invalid-interface-name-1.rs:3:28
  |
3 | #[liquid::interface(name = "r#fn")]
  |                            ^^^^^^
